--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -2,9 +2,15 @@
 <layout version="0.1.0">
 
     <default>
+        <reference name="header">
+            <remove name="top.search" />
+        </reference>
         <reference name="right">
             <remove name="catalog.compare.sidebar" />
             <remove name="cart_sidebar" />
+            <remove name="right.permanent.callout" />
+            <remove name="paypal.partner.right.logo" />
+            <remove name="right.poll" />
         </reference>
     </default>
 
