-slider startup pe cat. pizza

--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -12,6 +12,9 @@
             <remove name="paypal.partner.right.logo" />
             <remove name="right.poll" />
         </reference>
+        <reference name ="page">
+            <remove name="breadcrumbs" />
+        </reference>
     </default>
 
 </layout>
