--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -15,6 +15,14 @@
         <reference name ="page">
             <remove name="breadcrumbs" />
         </reference>
+        <page_two_columns_cart translate="label">
+            <label>Black Friday</label>
+            <reference name="root">
+                <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+                <action method="setIsHandle"><applied>1</applied></action>
+                <action method="setLayoutCode"><name>two_columns_cart</name></action>
+            </reference>
+        </page_two_columns_cart>
     </default>
 
 </layout>
