--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -53,15 +53,49 @@
             <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
         </reference>
     </catalog_product_view>
+
     <catalog_category_default>
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
         </reference>
     </catalog_category_default>
+
     <catalog_category_layered>
         <reference name="root">
             <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
         </reference>
     </catalog_category_layered>
 
+    <checkout_cart_index>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </checkout_cart_index>
+
+    <checkout_onepage_index>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </checkout_onepage_index>
+
+    <customer_account>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </customer_account>
+    <cms_page>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </cms_page>
+    <customer_logged_out>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </customer_logged_out>
+    <customer_logged_in>
+        <reference name="root">
+            <action method="setTemplate"><template>page/2columns-cart.phtml</template></action>
+        </reference>
+    </customer_logged_in>
 </layout>
