--- a/app/design/frontend/treponti/default/template/page/html/footer.phtml
+++ b/app/design/frontend/treponti/default/template/page/html/footer.phtml
@@ -23,19 +23,11 @@
  * @copyright   Copyright (c) 2013 Magento Inc. (http://www.magentocommerce.com)
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
-/**
- * @var Mage_Page_Block_Html_Header $this
- */
 ?>
-<div class="header-container">
-    <div class="header">
-        <?php if ($this->getIsHomePage()):?>
-        <h1 class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a></h1>
-        <?php else:?>
-        <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><img src="<?php echo $this->getLogoSrc() ?>" alt="<?php echo $this->getLogoAlt() ?>" /></a>
-        <?php endif?>
-        <?php echo $this->getChildHtml('topContainer'); ?>
-    </div>
-    <?php echo $this->getChildHtml('topMenu') ?>
-</div>
+<div class="footer-container">
+    <div class="footer">
+        <?php echo $this->getChildHtml() ?>
 
+        <address><?php echo $this->getCopyright() ?></address>
+    </div>
+</div>
