--- a/skin/frontend/treponti/default/css/styles.css
+++ b/skin/frontend/treponti/default/css/styles.css
@@ -25,8 +25,17 @@
 
 /* Reset ================================================================================= */
 * { margin:0; padding:0; }
-
-body          { background:#496778 url(../images/bkg_body.gif) 50% 0 repeat-y; font:12px/1.55 Arial, Helvetica, sans-serif; color:#2f2f2f; text-align:center; }
+@font-face {
+    font-family: "freehand";
+    src: url("../fonts/Freehand575BT.ttf");
+}
+body{ 
+	background: url("../images/body_bg.jpg") no-repeat scroll 50% 0 #990000;
+	color: #111111;
+    font-family: Arial;
+    font-size: 12px;
+    padding: 0;
+ }
 
 img           { border:0; vertical-align:top; }
 
@@ -96,13 +105,69 @@ ul,ol         { list-style:none; }
 .page-print { background:#fff; padding:25px 30px; text-align:left; }
 .page-empty { background:#fff; padding:20px; text-align:left; }
 .page-popup { background:#fff; padding:25px 30px; text-align:left; }
-.main-container { background:#fbfaf6 url(../images/bkg_main1.gif) 50% 0 no-repeat; }
-.main { width:900px; margin:0 auto; min-height:400px; padding:25px 25px 80px; background:#fffffe url(../images/bkg_main2.gif) 0 0 no-repeat; text-align:left; }
+.main-container {  }
+.main { 
+	margin: auto;
+	min-height:400px;
+	width: 923px; 
+}
+
 
 /* Base Columns */
+.main .col_left{
+	float: left;
+ 	width: 753px;
+}
+.col-right {
+ 	color: #FFFFFF;
+    float: left;
+    margin-left: 10px;
+    width: 160px;
+}
+
+	#sidebarInfo {
+	    background-color: #000000;
+	    font-size: 13px;
+	    height: 250px;
+	    padding: 15px;
+	    width: 130px;
+	}
+	.col-right ul.links {
+	    background: url("../images/bg_cart_sidebar.gif") no-repeat scroll 120px 8px #E3001B;
+	    height: 25px;
+	    line-height: 25px;
+	    padding: 5px 15px;
+	    width: 130px;
+	}
+
+		.toplinks {
+		    font-size: 11px;
+		    width: 130px;
+		}
+		.phone {
+		    background: url("../images/phone.gif") no-repeat scroll 0 1px rgba(0, 0, 0, 0);
+		    margin-top: 15px;
+		    padding-top: 37px;
+		}
+		.ymsg {
+		    background: url("../images/ymsg.gif") no-repeat scroll 0 5px rgba(0, 0, 0, 0);
+		    margin-top: 15px;
+		    padding-top: 37px;
+		}
+
+		.orar {
+		    margin-left: -3px;
+		    margin-top: 15px;
+		}
+		#facebook {
+		    background-color: #FFFFFF;
+		    height: 310px;
+		    margin-top: 10px;
+		    padding-top: 5px;
+		}
 .col-left { float:left; width:195px; padding:0 0 1px; }
-.col-main { float:left; width:685px; padding:0 0 1px; }
-.col-right { float:right; width:195px; padding:0 0 1px; }
+.col-main { float:left; width:753px; }
+
 
 /* 1 Column Layout */
 .col1-layout .col-main { float:none; width:auto; }
@@ -510,9 +575,20 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Header ================================================================================ */
 .logo { float:left; }
-.header-container { border-top:5px solid #0d2131; border-bottom:1px solid #415966; background:url(../images/bkg_header.jpg) 50% 0 repeat; }
-.header { width:930px; margin:0 auto; padding:10px; text-align:right; position:relative; z-index:10; }
-.header .logo { float:left; margin:3px 0 10px 12px; text-decoration:none !important; }
+.header-container { 
+
+	margin-bottom: 10px;
+    width: 753px;
+}
+.header {
+	background: url("../images/bg_head.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    height: 240px;
+    width: 753px;
+ }
+.header .logo { 
+	margin-left: 50px;
+    margin-top: 50px;
+ }
 .header .logo strong { position:absolute; top:-999em; left:-999em; width:0; height:0; font-size:0; line-height:0; text-indent:-999em; overflow:hidden; }
 .header h1.logo { margin:0; }
 .header .quick-access { float:right; width:600px; padding:28px 10px 0 0; }
@@ -541,29 +617,73 @@ tr.summary-details-excluded { font-style:italic; }
 .header-container .top-container a { font-size:11px; color:#ebbc58; }
 
 /********** < Navigation */
-.nav-container { background:#0a263d url(../images/bkg_nav0.jpg) 50% 0 repeat-y; }
-#nav { width:918px; margin:0 auto; padding:0 16px; font-size:13px; }
+.nav-container { 
+	background-color: #000000;
+    border-radius: 0 0 5px 5px;
+    font-size: 14px;
+    height: 50px;
+    width: 753px !important;
+}
+#nav li{ 
+	display: inline;
+	float: left;
+    padding: 0;
+    text-align: center;
+    width: 107px;
+ }
 
 /* All Levels */ /* Style consistent throughout all nav levels */
-#nav li { position:relative; text-align:left; }
+#nav li { position:relative;  }
 #nav li.over { z-index:998; }
 #nav a,
-#nav a:hover { display:block; line-height:1.3em; text-decoration:none; }
+#nav a:hover { display:block; text-decoration:none; }
 #nav span { display:block; cursor:pointer; white-space:nowrap; }
 #nav li ul span {white-space:normal; }
 #nav ul li.parent a { background:url(../images/bkg_nav2.gif) 100% 100% no-repeat; }
 #nav ul li.parent li a { background-image:none; }
 
+#nav li.nav-1 .products-menu{
+	width: 733px;
+}
+#nav li.nav-2 .products-menu{
+	width: 590px;
+}
+#nav li.nav-3 .products-menu{
+	width: 390px;
+}
+#nav li.nav-4 .products-menu{
+	width: 190px;
+}
+#nav li.nav-5 .products-menu{
+	width: 190px;
+}
+#nav li.nav-6 .products-menu{
+	width: 190px;
+}
+#nav li.nav-7 .products-menu{
+	width: 170px;
+}
 /* 0 Level */
 #nav li { float:left; }
-#nav li.active a { color:#d96708; }
-#nav a { float:left; padding:5px 12px 6px 8px; color:#a7c6dd; font-weight:bold; }
-#nav li.over a,
-#nav a:hover { color:#d96708; }
+	#nav li.active a { color:#E1011B; }
+	#nav a { 
+		color: #FFFFFF;
+	    display: block;
+	    font-family: freehand;
+	    font-size: 36px;
+	    line-height: 50px;
+	    width: 107px;
+	 }
+	#nav li.over a,
+	#nav a:hover { color:#E1011B; }
 
 /* 1st Level */
 #nav ul li,
-#nav ul li.active { float:none; margin:0; padding-bottom:1px; background:#ecf3f6 url(../images/bkg_nav1.gif) 0 100% repeat-x; }
+#nav ul li.active { 
+	display: block;
+    text-align: left;
+    width: 170px; 
+}
 #nav ul li.last { background:#ecf3f6; padding-bottom:0; }
 
 #nav ul a,
@@ -571,20 +691,42 @@ tr.summary-details-excluded { font-style:italic; }
 #nav ul li a { font-weight:normal !important; }
 
 /* 2nd Level */
-#nav ul,
-#nav div { position:absolute; width:15em; top:27px; left:-10000px; border:1px solid #899ba5; }
-#nav div ul { position:static; width:auto; border:none; }
+#nav .products-menu { 
+	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.85);
+	left:-10000px;  
+	padding: 10px;
+    position: absolute;
+    top: 47px;
+    width: 15em;
+	}
+#nav div ul {
+	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border-right: 1px solid #FFFFFF;
+    float: left;
+    margin-right: 10px;
+    padding: 0;
+    position: relative;
+    width: 170px;
+ }
 
 /* 3rd+ Level */
 #nav ul ul,
 #nav ul div { top:5px; }
 
-#nav ul li a { background:#ecf3f6; }
-#nav ul li a:hover { background:#d5e4eb; }
-#nav ul li a,
-#nav ul li a:hover { color:#2f2f2f !important; }
+#nav ul li a { 
+	color: #FFFFFF;
+    font-size: 12px;
+    font-family: arial;
+    line-height: 20px;
+    opacity: 1;
+    text-align: left;
+    text-transform: uppercase;
+ }
+#nav ul li a:hover {  }
+#nav ul li a{color: #fff !important;}
+#nav ul li a:hover { color:#E1011B !important; }
 #nav ul span,
-#nav ul li.last li span { padding:3px 15px 4px 15px; }
+#nav ul li.last li span { }
 
 /* Show menu */
 #nav li ul.shown-sub,
@@ -1704,7 +1846,7 @@ tr.summary-details-excluded { font-style:italic; }
 
 /* Footer ================================================================================ */
 .footer-container { border-top:15px solid #b6d1e2; }
-.footer { width:930px; margin:0 auto; padding:10px 10px 50px; }
+.footer { text-align: center; }
 .footer .store-switcher { display:inline; margin:0 5px 0 0; color:#fff; }
 .footer .store-switcher label { font-weight:bold; vertical-align:middle; }
 .footer .store-switcher select { padding:0; vertical-align:middle; }
