--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -12,6 +12,8 @@
             <action method="addJs"><script>maze/jquery/plugins/jquery.tabs.min.js</script></action>
             <action method="addJs"><script>maze/jquery/plugins/jquery.accordion.min.js</script></action>
             <action method="addJs"><script>maze/jquery/plugins/jquery.ba-throttle-debounce.min.js</script></action>
+            <action method="addJs"><script>slider/bjqs-1.3.js</script></action>
+            <action method="addJs"><script>slider/jquery.secret-source.min.js</script></action>
         </reference>
         <!--<remove name="header" />-->
         <reference name="header">
