--- a/app/design/frontend/treponti/default/template/page/2columns-cart.phtml
+++ b/app/design/frontend/treponti/default/template/page/2columns-cart.phtml
@@ -33,6 +33,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<?php echo $this->getLang() ?>" lang="<?php echo $this->getLang() ?>">
 <head>
 <?php echo $this->getChildHtml('head') ?>
+
+<script class="secret-source">
+    jQuery(document).ready(function($) {
+
+      $('#banner-slide').bjqs({
+        height      : 350,
+        width       : 698,
+        responsive  : false,
+        animtype      : 'slide'
+      });
+
+    });
+</script>
+
 </head>
 <body<?php echo $this->getBodyClass()?' class="'.$this->getBodyClass().'"':'' ?>>
 <?php echo $this->getChildHtml('after_body_start') ?>
