--- a/app/design/frontend/treponti/default/layout/local.xml
+++ b/app/design/frontend/treponti/default/layout/local.xml
@@ -12,8 +12,13 @@
             <action method="addJs"><script>maze/jquery/plugins/jquery.tabs.min.js</script></action>
             <action method="addJs"><script>maze/jquery/plugins/jquery.accordion.min.js</script></action>
             <action method="addJs"><script>maze/jquery/plugins/jquery.ba-throttle-debounce.min.js</script></action>
-            <action method="addJs"><script>slider/bjqs-1.3.js</script></action>
-            <action method="addJs"><script>slider/jquery.secret-source.min.js</script></action>
+
+            <action method="addCss"><stylesheet>css/styles.css</stylesheet></action>
+            <!--  Slider -->
+            <action method="addItem"><type>skin_js</type><name>slider/bjqs-1.3.js</name></action>
+            <action method="addItem"><type>skin_js</type><name>slider/jquery.secret-source.min.js</name></action>
+            <action method="addItem"><type>skin_css</type><name>slider/bjqs.css</name><params/></action>
+
         </reference>
         <!--<remove name="header" />-->
         <reference name="header">
