--- a/app/design/frontend/treponti/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/treponti/default/template/catalog/product/list.phtml
@@ -43,19 +43,11 @@
     <ul class="products-list bjqs" id="products-list">
     <?php foreach ($_productCollection as $_product): ?>
         <li id="<?php echo $_product->getData('url_key')?>" class="item<?php if( ++$_iterator == sizeof($_productCollection) ): ?> last<?php endif; ?>">
-            <?php // Product Image ?>
-            <a href="<?php echo $_product->getProductUrl() ?>"
-               title="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>"
-               class="product-image">
-                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(500); ?>" width="500" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>" /></a>
-            <?php // Product description ?>
-            <div class="product-shop">
-                <div class="f-fix">
                     <?php $_productNameStripped = $this->stripTags($_product->getName(), null, true); ?>
-                    <h2 class="product-name"><a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $_productNameStripped; ?>"><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></a></h2>
-                    <div class="desc std">
+                    <h2 class="product-name"><?php echo $_helper->productAttribute($_product, $_product->getName() , 'name'); ?></h2>
+
                         <?php echo $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?>
-                    </div>
+
                     <?php if ($_product->isGrouped()){
                         $_associatedProducts = $_product->getTypeInstance(true)->getAssociatedProducts($_product);
                         foreach($_associatedProducts as $_item){
@@ -76,10 +68,12 @@
                             <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                         <?php endif; ?>
                     <?php }?>
-
-                </div>
-            </div>
-
+            <?php // Product Image ?>
+            <a
+               title="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>"
+               class="product-image">
+                <img src="<?php echo $this->helper('catalog/image')->init($_product, 'thumbnail')->resize(500); ?>" width="500" height="500" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'thumbnail'), null, true) ?>" /></a>
+            <?php // Product description ?>
         </li>
     <?php endforeach; ?>
     </ul>
